--- a/app/src/main/res/layout/activity_vulkan_test.xml
+++ b/app/src/main/res/layout/activity_vulkan_test.xml
@@ -10,4 +10,8 @@
         android:layout_height="wrap_content"
         android:textSize="24dp"
         android:text="my test"/>
+    <SurfaceView
+        android:id="@+id/surface_view"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"/>
 </LinearLayout>
